--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-radio-group": "^1.2.0",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.394.0",
@@ -22,7 +23,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-slugify": "^4.0.1",
     "tailwind-merge": "^2.3.0",
+    "tailwind-typography": "^0.1.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1"
   },
