--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "iron-session": "^8.0.2",
     "lucide-react": "^0.394.0",
     "next": "14.2.4",
+    "next-i18n-router": "^5.5.0",
+    "next-intl": "^3.15.3",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
