--- a/package.json
+++ b/package.json
@@ -27,12 +27,16 @@
     "@radix-ui/react-slider": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "embla-carousel-react": "^8.1.6",
+    "emoji-picker-react": "^4.11.1",
     "framer-motion": "^11.2.12",
+    "gsap": "^3.12.5",
     "iron-session": "^8.0.2",
     "lucide-react": "^0.394.0",
     "next": "14.2.4",
@@ -43,6 +47,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
+    "react-intersection-observer": "^9.10.3",
     "react-slugify": "^4.0.1",
     "tailwind-merge": "^2.3.0",
     "tailwind-typography": "^0.1.0",
