--- a/package.json
+++ b/package.json
@@ -54,14 +54,15 @@
     "react-slugify": "^4.0.1",
     "tailwind-merge": "^2.3.0",
     "tailwind-typography": "^0.1.0",
-    "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.13",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
