--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "countries-list": "^3.1.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.6",
     "emoji-picker-react": "^4.11.1",
@@ -51,7 +52,10 @@
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.10.3",
+    "react-phone-number-input": "^3.4.3",
+    "react-share": "^5.1.0",
     "react-slugify": "^4.0.1",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwind-typography": "^0.1.0",
     "vaul": "^0.9.1",
