--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@google/generative-ai": "^0.15.0",
     "@hookform/resolvers": "^3.7.0",
     "@radix-ui/react-accordion": "^1.2.0",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -32,6 +33,7 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -49,14 +51,21 @@
     "next-intl": "^3.15.3",
     "next-themes": "^0.3.0",
     "react": "^18",
+    "react-color": "^2.19.3",
+    "react-datepicker": "^7.3.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.52.1",
+    "react-hook-form-persist": "^3.0.0",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.10.3",
     "react-phone-number-input": "^3.4.3",
+    "react-places-autocomplete": "^7.3.0",
     "react-share": "^5.1.0",
     "react-slugify": "^4.0.1",
+    "react-step-builder": "^3.0.6",
+    "react-time-picker": "^7.0.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwind-typography": "^0.1.0",
