--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwind-typography": "^0.1.0",
+    "usehooks-ts": "^3.1.0",
     "vaul": "^0.9.1",
     "zod": "^3.23.8"
   },
