--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@restart/hooks": "^0.4.16",
+    "add": "^2.0.6",
+    "axios": "^1.7.3",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -61,12 +63,14 @@
     "react-hook-form-persist": "^3.0.0",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.10.3",
+    "react-leaflet": "^4.2.1",
     "react-phone-number-input": "^3.4.3",
     "react-places-autocomplete": "^7.3.0",
     "react-share": "^5.1.0",
     "react-slugify": "^4.0.1",
     "react-step-builder": "^3.0.6",
     "react-time-picker": "^7.0.0",
+    "react-toastify": "^10.0.5",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwind-typography": "^0.1.0",
