login done and shop adding functionality done

--- a/package.json
+++ b/package.json
@@ -48,8 +48,10 @@
     "fuse": "^0.12.1",
     "gsap": "^3.12.5",
     "iron-session": "^8.0.2",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.394.0",
     "next": "14.2.4",
+    "next-auth": "^4.24.7",
     "next-i18n-router": "^5.5.0",
     "next-intl": "^3.15.3",
     "next-themes": "^0.3.0",
