--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@react-three/drei": "^9.109.5",
+    "@react-three/fiber": "^8.17.5",
     "@restart/hooks": "^0.4.16",
     "add": "^2.0.6",
     "axios": "^1.7.3",
@@ -44,7 +46,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.6",
     "emoji-picker-react": "^4.11.1",
-    "framer-motion": "^11.2.12",
+    "framer-motion": "^11.3.24",
     "fuse": "^0.12.1",
     "gsap": "^3.12.5",
     "iron-session": "^8.0.2",
@@ -76,6 +78,7 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwind-typography": "^0.1.0",
+    "three": "^0.167.1",
     "usehooks-ts": "^3.1.0",
     "vaul": "^0.9.1",
     "zod": "^3.23.8"
