already able to add a product , but some datas are not working

--- a/package.json
+++ b/package.json
@@ -65,16 +65,20 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.52.1",
     "react-hook-form-persist": "^3.0.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.10.3",
     "react-leaflet": "^4.2.1",
     "react-phone-number-input": "^3.4.3",
     "react-places-autocomplete": "^7.3.0",
+    "react-select": "^5.8.0",
     "react-share": "^5.1.0",
     "react-slugify": "^4.0.1",
     "react-step-builder": "^3.0.6",
     "react-time-picker": "^7.0.0",
     "react-toastify": "^10.0.5",
+    "react-virtualized": "^9.22.5",
+    "react-window": "^1.8.10",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwind-typography": "^0.1.0",
