--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "react-toastify": "^10.0.5",
     "react-virtualized": "^9.22.5",
     "react-window": "^1.8.10",
+    "recharts": "^2.12.7",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwind-typography": "^0.1.0",
