--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-hook-form-persist": "^3.0.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-image-crop": "^11.0.6",
     "react-intersection-observer": "^9.10.3",
     "react-leaflet": "^4.2.1",
     "react-phone-number-input": "^3.4.3",
