some fixes added products views are now retrieve via posts

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-hover-card": "^1.1.1",
@@ -36,6 +37,7 @@
     "@react-three/drei": "^9.109.5",
     "@react-three/fiber": "^8.17.5",
     "@restart/hooks": "^0.4.16",
+    "@tanstack/react-virtual": "^3.10.6",
     "add": "^2.0.6",
     "axios": "^1.7.3",
     "canvas-confetti": "^1.9.3",
@@ -46,7 +48,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.6",
     "emoji-picker-react": "^4.11.1",
-    "framer-motion": "^11.3.24",
+    "framer-motion": "^11.3.31",
     "fuse": "^0.12.1",
     "gsap": "^3.12.5",
     "iron-session": "^8.0.2",
