--- a/package.json
+++ b/package.json
@@ -51,8 +51,10 @@
     "framer-motion": "^11.3.31",
     "fuse": "^0.12.1",
     "gsap": "^3.12.5",
+    "html2canvas": "^1.4.1",
     "iron-session": "^8.0.2",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^2.5.1",
     "lucide-react": "^0.394.0",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
